Rename accredited provider to accredited body
This matches search-and-compare-ui: https://github.com/DFE-Digital/search-and-compare-ui/pull/310

--- a/app/views/course-not-running.html
+++ b/app/views/course-not-running.html
@@ -38,7 +38,7 @@
         <dd>{{ course.providerCode }}</dd>
         <dt>Training programme code:</dt>
         <dd>{{ course.programmeCode }}</dd>
-        <dt>Accredited provider:</dt>
+        <dt>Accredited body:</dt>
         <dd>{{ course.accrediting }}</dd>
         <dt>Route:</dt>
         <dd>{{ course.route }}</dd>
