--- a/app/views/course.html
+++ b/app/views/course.html
@@ -147,16 +147,16 @@
               {% if course.accrediting == data['training-provider-name'] %}
               <div class="app-check-your-answers__contents">
                 <dt class="app-check-your-answers__question">
-                  Separate accredited provider?
+                  Separate accredited body?
                 </dt>
                 <dd class="app-check-your-answers__answer">
-                  No, we are the accredited provider
+                  No, we are the accredited body
                 </dd>
               </div>
               {% else %}
                 <div class="app-check-your-answers__contents">
                   <dt class="app-check-your-answers__question">
-                    Accredited provider
+                    Accredited body
                   </dt>
                   <dd class="app-check-your-answers__answer">
                     {{ course.accrediting }}
