--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -73,7 +73,7 @@
     {% for accrediting in data['accreditors'] %}
       {% if data['accreditors'][0]['name'] != data['training-provider-name'] %}
         <h3 class="govuk-heading-m">
-          <span class="govuk-caption-m">Accredited provider</span>
+          <span class="govuk-caption-m">Accredited body</span>
           {{ accrediting.name }}
         </h3>
       {% endif %}
