--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -57,7 +57,7 @@
     </dd>
     {% if not accrediting.selfAccrediting %}
       {% if accrediting.name %}
-      <dt>Accredited provider:</dt>
+      <dt>Accredited body:</dt>
       <dd>{{ accrediting.name }}</dd>
       {% endif %}
     {% endif %}
