--- a/app/views/about-your-organisation/edit.html
+++ b/app/views/about-your-organisation/edit.html
@@ -28,14 +28,14 @@
         {% if not data['self_accrediting'] %}
           {% if data['accreditors'].length > 1 %}
             <h2 class="govuk-heading-l">
-              About your accredited providers
+              About your accredited bodies
             </h2>
-            <p>Describe advantages and special features of each accredited provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
+            <p>Describe advantages and special features of each accredited body. You must be specific and factual with any claims you make, and support them with evidence.</p>
           {% else %}
             <h2 class="govuk-heading-l">
-              About your accredited provider
+              About your accredited body
             </h2>
-            <p>Describe advantages and special features of your accredited provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
+            <p>Describe advantages and special features of your accredited body. You must be specific and factual with any claims you make, and support them with evidence.</p>
           {% endif %}
 
           {% for a in data['accreditors'] %}
