Specify that requirements are GCSE level

--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -1,4 +1,4 @@
-{% set title = 'Minimum course requirements' %}
+{% set title = 'Minimum GCSE requirements' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
