--- a/app/views/course.html
+++ b/app/views/course.html
@@ -165,7 +165,7 @@
               {% endif %}
               <div class="app-check-your-answers__contents">
                 <dt class="app-check-your-answers__question">
-                  Minimum requirements
+                  Minimum GCSE requirements
                 </dt>
                 <dd class="app-check-your-answers__answer">
                   {% if course.minRequirements %}
