--- a/app/views/new/edit.html
+++ b/app/views/new/edit.html
@@ -167,7 +167,7 @@
           {% endif %}
           <div class="app-check-your-answers__contents">
             <dt class="app-check-your-answers__question">
-              Minimum requirements
+              Minimum GCSE requirements
             </dt>
             <dd class="app-check-your-answers__answer">
               {% if data[code + '-min-requirements'] %}
