--- a/app/views/course.html
+++ b/app/views/course.html
@@ -147,7 +147,7 @@
               {% if course.accrediting == data['training-provider-name'] %}
               <div class="app-check-your-answers__contents">
                 <dt class="app-check-your-answers__question">
-                  Separate accredited body?
+                  Who is the accredited body?
                 </dt>
                 <dd class="app-check-your-answers__answer">
                   No, we are the accredited body
