--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -5,6 +5,7 @@
 <script src="/public/javascripts/modules.js"></script>
 <script src="/public/javascripts/modules/edge.js"></script>
 <script src="/public/javascripts/modules/copy-content.js"></script>
+<script src="/public/javascripts/modules/toggle-form.js"></script>
 <script src="/node_modules/govuk-frontend/all.js"></script>
 <script src="/public/javascripts/application.js"></script>
 
