--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -286,14 +286,18 @@
               name="{{ name }}"
               value="{{ field.name }}"
               {% if field.more %}data-aria-controls="radio-{{ name }}-part-{{ i }}-extra"{% endif %}
-              {{ checked(name, field.name) }}
+              {% if field.selected %}
+                checked
+              {% else %}
+                {{ checked(name, field.name) }}
+              {% endif %}
             >
             <label
               class="govuk-label govuk-radios__label{% if field.text %} govuk-label--s{% endif %}"
               for="radio-{{ name }}-part-{{ i }}"
               {% if field.text %}aria-describedby="radio-{{ name }}-part-{{ i }}-hint"{% endif %}
             >
-              {{ field.name }}
+              {{ field.name | safe }}
             </label>
             {% if field.text %}
               <span
