--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -1,7 +1,7 @@
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css"> -->
 <link rel="stylesheet" href="https://unpkg.com/accessible-autocomplete@1.6.1/dist/accessible-autocomplete.min.css" />
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
+<!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /><!--<![endif]-->
 
 <script>
