Link to new vacancies documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/vacancies-iteration-14-jan">Vacancies – Iteration 14 January</a>
+      </h3>
+      <p>
+        Updates to button styles, messaging and validation
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-course-iteration-14-jan">New course wizard – Iteration 14 January</a>
       </h3>
       <p>
