--- a/app/views/new/edit.html
+++ b/app/views/new/edit.html
@@ -39,7 +39,7 @@
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/phase">
-                Change<span class="govuk-visually-hidden"> SEN</span>
+                Change<span class="govuk-visually-hidden"> SEND</span>
               </a>
             </dd>
           </div>
@@ -49,6 +49,9 @@
             </dt>
             <dd class="app-check-your-answers__answer">
               {{ data[code + '-subject'] }}
+              {% if data[code + '-second-subject'] %}
+                <br />{{ data[code + '-second-subject'] }}
+              {% endif %}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/subject">
