--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -53,13 +53,24 @@
 
         {% if data[code + '-phase'] == 'Primary' %}
           {{ macros.select(code + '-subject', 'Primary subject', primaryFields) }}
+
+          {% set detailsHtml %}
+            <p>Enter an age range in years, for example: 5 to 11.</p>
+            {{ macros.textbox(code + '-age-youngest', 'From', false, 'govuk-input--width-2') }}
+            {{ macros.textbox(code + '-age-oldest', 'To', false, 'govuk-input--width-2') }}
+          {% endset %}
+
+          {{ govukDetails({
+            summaryText: "Specify an age range (optional)",
+            html: detailsHtml
+          }) }}
         {% elseif data[code + '-phase'] == 'Secondary' %}
           {{ macros.select(code + '-subject', 'Subject', secondaryFields) }}
 
           {% set detailsHtml %}
             <p>Your first subject is the main one. It’ll appear first in the course title. It represents the bursary or scholarship available if applicable.</p>
 
-            {{ macros.select(code + '-second-subject', 'Second subject', secondaryFields, 'For example ‘Physics with Mathematics’') }}
+            {{ macros.select(code + '-second-subject', 'Second subject (optional)', secondaryFields, 'For example ‘Physics with Mathematics’') }}
           {% endset %}
 
           {{ govukDetails({
