Add course start date to new course flow

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -178,6 +178,14 @@
                   {% endif %}
                 </dd>
               </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Course starts
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  {{ course.starts or 'September 2019' }}
+                </dd>
+              </div>
               <!-- <div class="app-check-your-answers__contents">
                 <dt class="app-check-your-answers__question">
                   Title
