--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -9,7 +9,7 @@
   </h1>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>What will a trainee get when they complete this course?</p>
+      <!-- <p>What will a trainee get when they complete this course?</p> -->
       <form action="{{ paths.next }}" method="post">
 
         {% set fields = [
