Add documentation for FE flow

--- a/app/views/history/edit-title/index.html
+++ b/app/views/history/edit-title/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New course wizard: Confirming course title' %}
+{% set title = 'New course wizard – Confirming course title' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
