--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/new-further-education-course">New course wizard – Further education</a>
+      </h3>
+      <p>
+        Designs for the further education path in the new course wizard
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/vacancies-iteration-14-jan">Vacancies – Iteration 14 January</a>
       </h3>
       <p>
@@ -55,28 +62,28 @@
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
-        <a href="/history/edit-title">New course wizard: Confirming course title</a>
+        <a href="/history/edit-title">New course wizard – Confirming course title</a>
       </h3>
       <p>
         Moving the course title fields into the wizard
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
-        <a href="/history/minimum-course-requirements">New course wizard: Minimum course requirements</a>
+        <a href="/history/minimum-course-requirements">New course wizard – Minimum course requirements</a>
       </h3>
       <p>
         Choose the minimum course requirements from the new course wizard
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
-        <a href="/history/specific-requirements">UCAS: Specific course requirements</a>
+        <a href="/history/specific-requirements">UCAS – Specific course requirements</a>
       </h3>
       <p>
         Documentation on minimum qualifications settings in UCAS web-link and apply
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
-        <a href="/history/new-course-locations">New course wizard: Training locations</a>
+        <a href="/history/new-course-locations">New course wizard – Training locations</a>
       </h3>
       <p>
         Choosing training locations from the new course wizard
