--- a/app/views/history/minimum-course-requirements/index.html
+++ b/app/views/history/minimum-course-requirements/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New course wizard: Minimum course requirements' %}
+{% set title = 'New course wizard – Minimum course requirements' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
