--- a/app/views/history/new-course-locations/index.html
+++ b/app/views/history/new-course-locations/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New course wizard: Training locations' %}
+{% set title = 'New course wizard – Training locations' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
