Add start date screen to new course docs

--- a/app/views/history/new-course-iteration-14-jan/index.html
+++ b/app/views/history/new-course-iteration-14-jan/index.html
@@ -16,6 +16,7 @@
     { text: 'Pick the training locations', id: 'pick-the-training-locations' },
     { text: 'Who is the accredited body?', id: 'who-is-the-accredited-body' },
     { text: 'Minimum GCSE requirements', id: 'minimum-gcse-requirements' },
+    { text: 'When does the course start?', id: 'when-does-the-course-start' },
     { text: 'Is this course title right?', id: 'is-this-course-title-right' },
     { text: 'Check your answers', id: 'check-your-answers' },
     { text: 'Course created', id: 'course-created' },
@@ -40,6 +41,8 @@
   {{ macros.screenshot('Who is the accredited body?', 'who-is-the-accredited-body', '/public/images/history/new-course-iteration-14-jan/thumbnails/08-who-is-the-accredited-body.png', '/public/images/history/new-course-iteration-14-jan/08-who-is-the-accredited-body.png', '') }}
 
   {{ macros.screenshot('Minimum GCSE requirements', 'minimum-gcse-requirements', '/public/images/history/new-course-iteration-14-jan/thumbnails/09-minimum-gcse-requirements.png', '/public/images/history/new-course-iteration-14-jan/09-minimum-gcse-requirements.png', '') }}
+
+  {{ macros.screenshot('When does the course start?', 'when-does-the-course-start', '/public/images/history/new-further-education-course/thumbnails/06-when-does-the-course-start.png', '/public/images/history/new-further-education-course/06-when-does-the-course-start.png', '') }}
 
   {{ macros.screenshot('Is this course title right?', 'is-this-course-title-right', '/public/images/history/new-course-iteration-14-jan/thumbnails/10-is-this-course-title-right.png', '/public/images/history/new-course-iteration-14-jan/10-is-this-course-title-right.png', '') }}
 
