--- a/app/views/new/edit.html
+++ b/app/views/new/edit.html
@@ -2,6 +2,8 @@
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink('/course/' + data['provider-code'] + '/' + code) }}{% endblock %}
+{% set showChangeLinks = true %}
+{% set showTitleAndDescription = true %}
 
 {% block content %}
   <form action="{{ paths.next }}" method="post">
@@ -13,226 +15,7 @@
         </h1>
 
         <dl class="app-check-your-answers app-check-your-answers--short govuk-!-margin-top-9 govuk-!-margin-bottom-9">
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Level
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-phase'] }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/phase">
-                Change<span class="govuk-visually-hidden"> phase</span>
-              </a>
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              SEND
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {% if data[code + '-sen'] %}
-                Yes
-              {% else %}
-                No
-              {% endif %}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/phase">
-                Change<span class="govuk-visually-hidden"> SEND</span>
-              </a>
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Subject
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-subject'] }}
-              {% if data[code + '-second-subject'] %}
-                <br />{{ data[code + '-second-subject'] }}
-              {% endif %}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/subject">
-                Change<span class="govuk-visually-hidden"> subject</span>
-              </a>
-            </dd>
-          </div>
-          {% if data[code + '-subject'] == 'Modern languages' %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Languages
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-first-language'] }}
-              {% if data[code + '-second-language'] %}
-                <br />{{ data[code + '-second-language'] }}
-              {% endif %}
-              {% if data[code + '-further-languages'] %}
-                <br />
-                {{ data[code + '-further-languages'].join('<br />') | safe }}
-              {% endif %}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/languages">
-                Change<span class="govuk-visually-hidden"> languages</span>
-              </a>
-            </dd>
-          </div>
-          {% endif %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Outcome
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-outcome'] }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/outcome">
-                Change<span class="govuk-visually-hidden"> outcome</span>
-              </a>
-            </dd>
-          </div>
-          {% if data['new-course']['include-fee-or-salary'] %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Fee or salary
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-type'] }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/funding">
-                Change<span class="govuk-visually-hidden"> fee or salary</span>
-              </a>
-            </dd>
-          </div>
-          {% endif %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Full or part time
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-full-part'] }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/full-time-part-time">
-                Change<span class="govuk-visually-hidden"> full time or part time</span>
-              </a>
-            </dd>
-          </div>
-          {% if data['new-course']['include-locations'] and data[code + '-locations'] %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Training locations
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-locations'] | join('<br>') | safe }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/training-locations">
-                Change<span class="govuk-visually-hidden"> training locations</span>
-              </a>
-            </dd>
-          </div>
-          {% endif %}
-          {% if data['new-course']['include-accredited'] %}
-            {% if data[code + '-has-accredited-body'] == 'Another organisation' %}
-              <div class="app-check-your-answers__contents">
-                <dt class="app-check-your-answers__question">
-                  Accredited body
-                </dt>
-                <dd class="app-check-your-answers__answer">
-                  {{ data[code + '-accredited-body'] }}
-                </dd>
-                <dd class="app-check-your-answers__change">
-                  <a href="/new/{{ code }}/accredited-body">
-                    Change<span class="govuk-visually-hidden"> accredited body</span>
-                  </a>
-                </dd>
-              </div>
-            {% else %}
-              <div class="app-check-your-answers__contents">
-                <dt class="app-check-your-answers__question">
-                  Who is the accredited body?
-                </dt>
-                <dd class="app-check-your-answers__answer">
-                  {{ data[code + '-has-accredited-body'] }}
-                </dd>
-                <dd class="app-check-your-answers__change">
-                  <a href="/new/{{ code }}/accredited-body">
-                    Change<span class="govuk-visually-hidden"> accredited body</span>
-                  </a>
-                </dd>
-              </div>
-            {% endif %}
-          {% endif %}
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Minimum GCSE requirements
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {% if data[code + '-min-requirements'] %}
-                {{ data[code + '-min-requirements'].join('<br />') | safe }}
-              {% else %}
-                None
-              {% endif %}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/eligibility">
-                Change<span class="govuk-visually-hidden"> minimum requirements</span>
-              </a>
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Course starts
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-start-date'] }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/start-date">
-                Change<span class="govuk-visually-hidden"> start date</span>
-              </a>
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Title
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ data[code + '-title'] or data[code + '-generated-title'] or generatedTitle }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-              <a href="/new/{{ code }}/title">
-                Change<span class="govuk-visually-hidden"> title</span>
-              </a>
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Description
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ courseOffered }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-
-            </dd>
-          </div>
-          <div class="app-check-your-answers__contents">
-            <dt class="app-check-your-answers__question">
-              Course code
-            </dt>
-            <dd class="app-check-your-answers__answer">
-              {{ code }}
-            </dd>
-            <dd class="app-check-your-answers__change">
-
-            </dd>
-          </div>
+          {% include "new/_answers.html" %}
         </dl>
 
         <!-- <h2 class="govuk-heading-l">Preview</h2>
