--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -56,6 +56,9 @@
     Languages
   </dt>
   <dd class="app-check-your-answers__answer">
+    {% if data[code + '-languages'] %}
+      {{ data[code + '-languages'].join('<br />') | safe }}
+    {% endif %}
     {{ data[code + '-first-language'] }}
     {% if data[code + '-second-language'] %}
       <br />{{ data[code + '-second-language'] }}
