--- a/app/views/course.html
+++ b/app/views/course.html
@@ -67,14 +67,25 @@
       <div class="course-parts course-parts--large">
         <ul class="course-parts-items">
           <li class="course-parts-item">
-            <h3 class="course-part-task">
-              <a class="course-part-task-action" href="/new/{{ course.programmeCode }}/edit">
-                Course information
-              </a>
-            </h3>
-            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
-              {% include "new/_answers.html" %}
-            </dl>
+            {% if course.level == 'Further education' %}
+              <h3 class="course-part-task">
+                <a class="course-part-task-action" href="/new/{{ course.programmeCode }}/further/edit">
+                  Course information
+                </a>
+              </h3>
+              <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
+                {% include "new/further/_answers.html" %}
+              </dl>
+            {% else %}
+              <h3 class="course-part-task">
+                <a class="course-part-task-action" href="/new/{{ course.programmeCode }}/edit">
+                  Course information
+                </a>
+              </h3>
+              <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-6">
+                {% include "new/_answers.html" %}
+              </dl>
+            {% endif %}
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">
