Add Urdu to languages list

--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -19,6 +19,7 @@
           { name: 'Mandarin'},
           { name: 'Russian'},
           { name: 'Spanish'},
+          { name: 'Urdu'},
           { name: 'Other modern language'}
           ]
         %}
