--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/edit-course-workflow">Edit course information workflow</a>
+      </h3>
+      <p>
+        Workflow diagram for editing course information
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/new-further-education-course">New course wizard – Further education</a>
       </h3>
       <p>
